# sudoku_ai

./: CMakeLists.txt  Sudoku_AIConfig.h  Sudoku_AIConfig.h.in  documentation.txt  main.cpp  script.py
SudokuClass/: CMakeLists.txt  sudoku.cpp  sudoku.h
tests/: CMakeLists.txt  first_test.cpp  fixtures.h  sudoku_test.cpp  test_fixture_data.txt
